tests/snapshots/test_runner__tests__compiler__transpile__applicative_let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let power
  : | Integer Integer => Integer
  = @@@ Math.pow @@@

let apply
  : | Integer | Integer Integer => Integer => Integer
  = | x f => x.f(x)

do
  let result =
    let/apply x y = 3
    x.power(y)
  result.print

============
EXIT CODE
============
0

============
STDOUT
============
27

============
STDERR
============
