tests/snapshots/test_runner__tests__compiler__transpile__cps_sugar_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Option<T> = #some (T) | #none

let<T, U> (option: Option<T>) unwrap (callback : T -> Option<U>) : Option<U> =
  {
  | #some (t) -> callback (t)
  | #none -> #none
  } (option)

entry
  let x = ~ (
    #some [
      x =  #some "hi" ! unwrap,
      y = #some 2 ! unwrap,
      z =  ~ (#some [ x = #none ! unwrap, y = #some 2 ! unwrap ])
    ]
  );
  x print // #some [ x = 1, y = 2, z = #none ]

============
EXIT CODE
============
0

============
STDOUT
============
{
  '$': '#some',
  _: { '$x': 'hi', '$y': 2, '$z': { '$': '#none', _: null } }
}

============
STDERR
============
