tests/snapshots/test_runner__tests__compiler__transpile__cps_sugar_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Option<T> = #some(T) | #none

let<A, B> (o: Option<A>) map (f: A -> B) : Option<B> =
  {
    \#some(o) -> o f #some
    \#none -> #none
  } (o)

entry
  ~("%${#none ! map}%") print;
  ~("%${#some("hello world") ! map}%") print

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': '#none', _: null }
{ '$': '#some', _: '%hello world%' }

============
STDERR
============
