tests/snapshots/test_runner__tests__compiler__transpile__diamond_dependency_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
import "./diamond_dependency_2.kk" bar
import "./diamond_dependency_3.kk" spam

do [bar spam].print()

============
EXIT CODE
============
0

============
STDOUT
============
Compile cache hit: tests/compiler/transpile/diamond_dependency_1.kk
[ 2, 3 ]

============
STDERR
============
