tests/snapshots/test_runner__tests__compiler__transpile__if_expression_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let more_than = (x: Float, y: Float): Boolean => @@@ _0 > _1 @@@

enum Grade { A, B, C, Failed }

let grade = (score: Float): Grade =>
  if score.more_than(80.0)
    A
  else if score.more_than(60.0)
    B
  else if score.more_than(40.0)
    C
  else
    Failed


do 85.0.grade().print()
do 65.0.grade().print()
do 45.0.grade().print()
do 35.0.grade().print()

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'A', _: null }
{ '$': 'B', _: null }
{ '$': 'C', _: null }
{ '$': 'Failed', _: null }

============
STDERR
============
