tests/snapshots/test_runner__tests__compiler__transpile__import_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Using prelude symbols imported from other file should not have errors

import {showMe} from "./import_1.kk"

do "Hello world".showMe()

============
EXIT CODE
============
0

============
STDOUT
============
Hello world

============
STDERR
============
